Add Plan Team Day feature, realistic seed data, and fix evaluation findings F1/F5/F7/F9
- New /plan-team-day page: analyses team availability per weekday, recommends
  best day for in-person collaboration, bulk-schedules team with one click
- DataSeeder: populates realistic desk bookings (40-70% occupancy curve),
  team schedules with hybrid patterns, and room bookings on startup
- F1 fix: confirmation toast on Update Status page after saving work mode
- F5 fix: capacity warning banner on desk booking when floor >=80% occupied
- F7 fix: tooltips on all Quick Actions explaining behaviour before clicking
- F9 fix: HR capacity alert now shows the 80% threshold and desk counts
- Align HR integration client employee names with users.json
- Remove stale hardcoded seed data from repositories

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>